samples/_failures_safe/1761425207_9f91a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a63f6eb3.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_a63f6eb3.c:142:9: error: expected declaration or statement at end of input
  142 |         printf("No entries found with level %s\n", level);
      |         ^~~~~~
./samples/SAFE/__tmp_a63f6eb3.c:142:9: error: expected declaration or statement at end of input
